<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView2"
    android:background="@color/style_gawk_mainColor"
    android:paddingBottom="@dimen/styleGawkMainPadding"
    android:paddingLeft="@dimen/styleGawkMainPadding"
    android:paddingRight="@dimen/styleGawkMainPadding">

    <include
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbarTop">
    </include>

    <ScrollView
        android:layout_width="fill_parent" android:layout_height="match_parent"
        android:background="@color/style_gawk_mainColor_bg" android:layout_below="@+id/toolbarTop">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarTop"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/reference_AddNote_body"
                    android:id="@+id/textView4"
                    android:layout_below="@+id/textView3"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reference_AddNote_header"
                    android:id="@+id/textView3"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reference_Serach_header"
                    android:id="@+id/textView5"
                    android:layout_below="@+id/textView4"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/reference_Serach_body"
                    android:id="@+id/textView6"
                    android:layout_below="@+id/textView5"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reference_ViewNote_header"
                    android:id="@+id/textView7"
                    android:layout_below="@+id/textView6"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/reference_ViewNote_body"
                    android:id="@+id/textView8"
                    android:layout_below="@+id/textView7"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reference_DeleteNote_header"
                    android:id="@+id/textView9"
                    android:layout_below="@+id/textView8"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/reference_DeleteNote_body"
                    android:id="@+id/textView10"
                    android:layout_below="@+id/textView9"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reference_CopyNote_header"
                    android:id="@+id/textView11"
                    android:layout_below="@+id/textView10"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/reference_CopyNote_body"
                    android:id="@+id/textView12"
                    android:layout_below="@+id/textView11"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>
    </ScrollView>

</RelativeLayout>