<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/styleGawkMainPadding"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/style_gawk_mainColor"
    android:paddingLeft="@dimen/styleGawkMainPadding"
    android:paddingRight="@dimen/styleGawkMainPadding">

    <include
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbarTop">
    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/style_gawk_mainColor_bg"
        android:layout_below="@+id/toolbarTop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/addNote_save"
            android:id="@+id/btn_addNote_save"
            android:textSize="@dimen/addNote_heading_size"
            android:paddingBottom="@dimen/addNote_button_padding"
            android:nestedScrollingEnabled="false"
            style="@style/gawk_style_button"
            android:enabled="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNote_remember"
            android:id="@+id/textView2"
            android:textSize="@dimen/addNote_heading_size"
            android:layout_below="@+id/btn_addNote_save"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/addNote_heading_top_margin"
            />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:layout_below="@+id/textView2"
            android:id="@+id/toggleButton_Voice"
            style="@style/gawk_addNote_toggleVoice" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toggleButton_Voice"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroupRemember"
                android:clickable="false"
                android:gravity="center_vertical"
                android:layout_below="@+id/textView2"
                android:layout_above="@+id/recognizeText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addNote_remember_not"
                    android:id="@+id/radioBtnRemember4"
                    android:checked="true"
                    android:layout_below="@+id/radioBtnRemember3"
                    android:layout_alignLeft="@+id/radioBtnRemember2"
                    android:layout_alignStart="@+id/radioBtnRemember2"
                    android:textSize="@dimen/addNote_body_size" />

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addNote_remember_custom"
                    android:id="@+id/radioBtnRemember5"
                    android:checked="false"
                    android:layout_below="@+id/radioBtnRemember4"
                    android:layout_alignLeft="@+id/radioBtnRemember4"
                    android:layout_alignStart="@+id/radioBtnRemember4"
                    android:textSize="@dimen/addNote_body_size" />
            </RadioGroup>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/addNote_ready"
                android:id="@+id/recognizeText"
                android:inputType="textAutoCorrect|textMultiLine"
                android:gravity="top"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="@dimen/addNote_body_size"
                android:layout_marginTop="@dimen/addNote_heading_top_margin"
                android:autoText="false"
                android:enabled="true"
                style="@style/gawk_addNote_textField"
                android:paddingTop="0dp"
                android:background="@drawable/texteditbg"></EditText>
    </LinearLayout>

        <ToggleButton
            style="@style/gawk_addNote_toggleVibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/toggleButton_Vibration"
            android:layout_below="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</RelativeLayout>